--- a/public/vita/index.html
+++ b/public/vita/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="" />
 <meta name="author" content="" />
-<title>Wahlärztin | Dr. Heidi Graber-König</title>
+<title> | Dr. Heidi Graber-König</title>
 
     <link rel="stylesheet" href="/css/main.css">
 
@@ -46,22 +46,33 @@
 <section class="page-section clearfix">
     <div class="container">
         <div class="intro">
-            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="/wahl.jpg" alt="..." />
+            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="intro.jpg" alt="..." />
             <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                 <h2 class="section-heading mb-4">
-                    <span class="section-heading-upper">Wahlärztin</span>
-                    <span class="section-heading-lower">Was bedeutet das?</span>
+                    <span class="section-heading-upper"></span>
+                    <span class="section-heading-lower">Vita</span>
                 </h2>
-                <p class="mb-3"><p>Als Wahlärztin hat man kein Vertragsverhältnis mit den Krankenversicherungsanstalten. Jeder, der will, kann die Leistungen eines Wahlarztes in Anspruch nehmen.</p>
-<p>Somit benötigen Sie für die Inanspruchnahme wahlärztlicher Leistungen keinen Überweisungsschein und keine E-Card.</p>
+                <p class="mb-3"><p>Nach meiner Matura studierte ich Humanmedizin an der med. Univ. Innsbruck, welches ich 1995 mit der univ. Dr.med. abgeschlossen habe, immer begleitet vom Studium der Komplementär- und psychosomatischen Medizin.</p>
+<p>Meine Turnusärztinausbildung absolvierte ich in Vorarlberg, begleitet von ständigen Weiterbildungen.</p>
+<p>Nach familiär bedingten Auslandsaufenthalten in den USA und dort Beschäftigung im mental health departement arbeitete ich 6 Jahre in einer allgemeinmedizinischen Praxis mit Akupunktur als Vertretung, sowie in der Dialyse Bregenz. In der weiter Folge vertiefte ich meine Weiterbildung in der deutschen Panoramaklinik für psychosomatische und psychotherapeutische Medizin und Naturheilkunde in Scheidegg, wo ich als Ärztin für Allgemeinmedizin, TCM und Psychotherapie 2 1/2 Jahre arbeitete.</p>
+<p>Daraufhin folgte meine berufliche Selbständigkeit als Ärztin für Allgemeinmedizin, Akupunktur und psychotherapeutische Medizin in einer Gemeinschaftspraxis für weitere 2 Jahre.</p>
+<ul>
+<li>ÖÄK Diplome, Weiterbildungen</li>
+<li>Psychosoziale und psychosomatische Medizin</li>
+<li>Ärztin für psychotherapeutische Medizin</li>
+<li>Ärztin für Allgemeinmedizin</li>
+<li>Akupunktur</li>
+<li>Notfallmedizin</li>
+<li>Fortbildungsdiplome</li>
+<li>Schematherapie, Traumatherapie( EMDR und IRRT)</li>
+</ul>
 </p>
                 
             </div>
         </div>
     </div>
 </section>
-
-
+		
 		
 <section class="page-section cta">
     <div class="container">
@@ -69,19 +80,29 @@
             <div class="col-xl-9 mx-auto">
                 <div class="cta-inner bg-faded text-center rounded">
                     <h2 class="section-heading mb-4">
-                        
-                        <span class="section-heading-lower">WIE ERFOLGT DIE ABRECHNUNG?</span>
+                        <span class="section-heading-upper"></span>
+                        <span class="section-heading-lower">Vita</span>
                     </h2>
-                    <p class="mb-0"><p>Um so gut wie möglich eine zeitraubende Bürokratie zu vermeiden, erlaube ich mir einmal am Ende des jeweiligen Therapiemonats, die Honorarnote/ Rechnung über die erbrachte Leistung, zu stellen.</p>
-<p>Diese können Sie dann bequem von zuhause online oder bei der Bank mittels Erlagschein einzahlen.</p>
-<p>Die bezahlte Rechnung können Sie anschließend bei Ihrer gesetzlichen Krankenversicherung, sowie auch privaten Krankenversicherung dann einreichen, welche Ihnen dann den zustehenden Rückerstattungsbetrag auf Ihr angegebenes Konto rücküberweist. Auf die Höhe des Rückerstattungsbetrages haben wir keinen Einfluss, da viele Patienten individuelle Verträge mit ihrer Krankenversicherung haben. Daher ist der Rückerstattungsbetrag nicht nur von Patient zu Patient unterschiedlich, sondern auch von Krankenversicherung zu Krankenversicherung.</p>
+                    <p class="mb-0"><p>Nach meiner Matura studierte ich Humanmedizin an der med. Univ. Innsbruck, welches ich 1995 mit der univ. Dr.med. abgeschlossen habe, immer begleitet vom Studium der Komplementär- und psychosomatischen Medizin.</p>
+<p>Meine Turnusärztinausbildung absolvierte ich in Vorarlberg, begleitet von ständigen Weiterbildungen.</p>
+<p>Nach familiär bedingten Auslandsaufenthalten in den USA und dort Beschäftigung im mental health departement arbeitete ich 6 Jahre in einer allgemeinmedizinischen Praxis mit Akupunktur als Vertretung, sowie in der Dialyse Bregenz. In der weiter Folge vertiefte ich meine Weiterbildung in der deutschen Panoramaklinik für psychosomatische und psychotherapeutische Medizin und Naturheilkunde in Scheidegg, wo ich als Ärztin für Allgemeinmedizin, TCM und Psychotherapie 2 1/2 Jahre arbeitete.</p>
+<p>Daraufhin folgte meine berufliche Selbständigkeit als Ärztin für Allgemeinmedizin, Akupunktur und psychotherapeutische Medizin in einer Gemeinschaftspraxis für weitere 2 Jahre.</p>
+<ul>
+<li>ÖÄK Diplome, Weiterbildungen</li>
+<li>Psychosoziale und psychosomatische Medizin</li>
+<li>Ärztin für psychotherapeutische Medizin</li>
+<li>Ärztin für Allgemeinmedizin</li>
+<li>Akupunktur</li>
+<li>Notfallmedizin</li>
+<li>Fortbildungsdiplome</li>
+<li>Schematherapie, Traumatherapie( EMDR und IRRT)</li>
+</ul>
 </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
 
 
   </main>
