--- a/public/wahlaerztin---kopie/index.html
+++ b/public/wahlaerztin---kopie/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="" />
 <meta name="author" content="" />
-<title>Home | Dr. Heidi Graber-König</title>
+<title>Wahlärztin | Dr. Heidi Graber-König</title>
 
     <link rel="stylesheet" href="/css/main.css">
 
@@ -29,7 +29,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/home">HOME</a></li>
+                <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/">HOME</a></li>
                 <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/leistungen">LEISTUNGEN</a></li>
                 <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/wahlaerztin">WAHLÄRZTIN</a></li>
                 <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="/kontakt">KONTAKT</a></li>
@@ -51,30 +51,42 @@
                             <span class="section-heading-upper">Fresh Coffee</span>
                             <span class="section-heading-lower">Worth Drinking</span>
                         </h2>
-                        <p class="mb-3"><p><strong>Dr. med. Heidi Graber-König</strong></p>
-<p>Als Ärztin für psychotherapeutische und psychosomatische Medizin ist es mir ein besonderes Anliegen, Sie einfühlsam und kompetent , auf Ihrem Weg zum inneren Gleichgewicht und Wohlbefinden, begleiten zu dürfen.</p>
-<p>Ich biete Ihnen eine kombinierte psychotherapeutische- psychosomatische</p>
-<p>Behandlung an, die auf Ihre individuellen Bedürfnisse abgestimmt ist.</p>
-<p><strong>In jedem Menschen schlummert die Kraft, sich bei sich selbst zuhause fühlen zu können!</strong></p>
-<p><strong>Vita:</strong></p>
-<p>Nach meiner Matura….( <strong>bitte aus der tcm website übernehmen) bis inklusive:</strong></p>
-<p>Meine Turnusärztinausbildung absolvierte ich in Vorarlberg, begleitet von ständigen Weiterbildungen.</p>
-<p>Nach familiär bedingten Auslandsaufenthalten….übernehmen bis…2 ½ Jahre arbeitete.</p>
-<p>Daraufhin folgte meine berufliche Selbständigkeit als Ärztin für Allgemeinmedizin, Akupunktur und psychotherapeutische Medizin in einer Gemeinschaftspraxis für weitere 2 Jahre.</p>
-<p>ÖÄK Diplome, Weiterbildungen</p>
-<p>Psychosoziale und psychosomatische Medizin</p>
-<p>Ärztin für psychotherapeutische Medizin</p>
-<p>Ärztin für Allgemeinmedizin</p>
-<p>Akupunktur</p>
-<p>Notfallmedizin</p>
-<p>Fortbildungsdiplome</p>
-<p>Schematherapie, Traumatherapie( EMDR und IRRT)</p>
+                        <p class="mb-3"><p>Als Wahlärztin hat man kein Vertragsverhältnis</p>
+<p>mit den Krankenversicherungsanstalten. Jeder, der will,</p>
+<p>kann die Leistungen eines Wahlarztes in Anspruch nehmen.</p>
+<p>Somit benötigen Sie für die Inanspruchnahme wahlärztlicher</p>
+<p>Leistungen keinen Überweisungsschein und keine E-Card.</p>
+<p>WIE ERFOLGT DIE ABRECHNUNG</p>
+<p>Um so gut wie möglich eine zeitraubende Bürokratie zu vermeiden,</p>
+<p>erlaube ich mir einmal am Ende des jeweiligen Therapiemonats ,</p>
+<p>die Honorarnote/ Rechnung über die erbrachte Leistung, zu stellen.</p>
+<p>Diese können Sie dann bequem von zuhause online oder bei der</p>
+<p>Bank mittels Erlagschein einzahlen.</p>
+<p>Die bezahlte Rechnung können Sie anschließend bei Ihrer gesetzlichen</p>
+<p>Krankenversicherung, sowie auch privaten Krankenversicherung dann</p>
+<p>einreichen, welche Ihnen dann den zustehenden Rückerstattungsbetrag auf Ihr angegebenes Konto rücküberweist. Auf die Höhe des Rückerstattungsbetrages haben wir keinen Einfluss, da viele Patienten individuelle Verträge mit ihrer Krankenversicherung haben. Daher ist der Rückerstattungsbetrag nicht nur von Patient zu Patient unterschiedlich, sondern auch von Krankenversicherung zu Krankenversicherung.</p>
 </p>
                         <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a></div>
                     </div>
                 </div>
             </div>
         </section>
+          <section class="page-section cta">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-9 mx-auto">
+                        <div class="cta-inner bg-faded text-center rounded">
+                            <h2 class="section-heading mb-4">
+                                <span class="section-heading-upper">Our Promise</span>
+                                <span class="section-heading-lower">To You</span>
+                            </h2>
+                            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
   </main>
