--- a/public/wahlaerztin2/index.html
+++ b/public/wahlaerztin2/index.html
@@ -50,10 +50,11 @@
             <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                 <h2 class="section-heading mb-4">
                     <span class="section-heading-upper">Wahlärztin</span>
-                    <span class="section-heading-lower">Was bedeutet das?</span>
+                    <span class="section-heading-lower">WIE ERFOLGT DIE ABRECHNUNG?</span>
                 </h2>
-                <p class="mb-3"><p>Als Wahlärztin hat man kein Vertragsverhältnis mit den Krankenversicherungsanstalten. Jeder, der will, kann die Leistungen eines Wahlarztes in Anspruch nehmen.</p>
-<p>Somit benötigen Sie für die Inanspruchnahme wahlärztlicher Leistungen keinen Überweisungsschein und keine E-Card.</p>
+                <p class="mb-3"><p>Um so gut wie möglich eine zeitraubende Bürokratie zu vermeiden, erlaube ich mir einmal am Ende des jeweiligen Therapiemonats, die Honorarnote/ Rechnung über die erbrachte Leistung, zu stellen.</p>
+<p>Diese können Sie dann bequem von zuhause online oder bei der Bank mittels Erlagschein einzahlen.</p>
+<p>Die bezahlte Rechnung können Sie anschließend bei Ihrer gesetzlichen Krankenversicherung, sowie auch privaten Krankenversicherung dann einreichen, welche Ihnen dann den zustehenden Rückerstattungsbetrag auf Ihr angegebenes Konto rücküberweist. Auf die Höhe des Rückerstattungsbetrages haben wir keinen Einfluss, da viele Patienten individuelle Verträge mit ihrer Krankenversicherung haben. Daher ist der Rückerstattungsbetrag nicht nur von Patient zu Patient unterschiedlich, sondern auch von Krankenversicherung zu Krankenversicherung.</p>
 </p>
                 
             </div>
