--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-        <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Dr. med. Heidi Graber-König</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
@@ -68,7 +68,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-9 mx-auto">
-                <div class="cta-inner bg-faded text-center rounded">
+                <div class="cta-inner bg-faded rounded">
                     <h2 class="section-heading mb-4">
                         <span class="section-heading-upper"></span>
                         <span class="section-heading-lower">Vita</span>
@@ -77,8 +77,8 @@
 <p>Meine Turnusärztinausbildung absolvierte ich in Vorarlberg, begleitet von ständigen Weiterbildungen.</p>
 <p>Nach familiär bedingten Auslandsaufenthalten in den USA und dort Beschäftigung im mental health departement arbeitete ich 6 Jahre in einer allgemeinmedizinischen Praxis mit Akupunktur als Vertretung, sowie in der Dialyse Bregenz. In der weiter Folge vertiefte ich meine Weiterbildung in der deutschen Panoramaklinik für psychosomatische und psychotherapeutische Medizin und Naturheilkunde in Scheidegg, wo ich als Ärztin für Allgemeinmedizin, TCM und Psychotherapie 2 1/2 Jahre arbeitete.</p>
 <p>Daraufhin folgte meine berufliche Selbständigkeit als Ärztin für Allgemeinmedizin, Akupunktur und psychotherapeutische Medizin in einer Gemeinschaftspraxis für weitere 2 Jahre.</p>
+<h2 id="öäk-diplome-weiterbildungen">ÖÄK Diplome, Weiterbildungen</h2>
 <ul>
-<li>ÖÄK Diplome, Weiterbildungen</li>
 <li>Psychosoziale und psychosomatische Medizin</li>
 <li>Ärztin für psychotherapeutische Medizin</li>
 <li>Ärztin für Allgemeinmedizin</li>
@@ -97,7 +97,7 @@
 
   </main>
   <footer class="footer text-faded text-center py-5">
-  <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König; <a href="/impressum">Impressum</a></p></div>
 </footer>
 
 
