--- a/public/leistungen/index.html
+++ b/public/leistungen/index.html
@@ -26,7 +26,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-        <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Dr. med. Heidi Graber-König</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
@@ -46,7 +46,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-9 mx-auto">
-                        <div class="cta-inner bg-faded text-center rounded">
+                        <div class="cta-inner bg-faded rounded">
                             <h2 class="section-heading mb-4">
                                 <span class="section-heading-upper">Leistungsspektrum</span>
                                 <span class="section-heading-lower"></span>
@@ -71,7 +71,7 @@ auf Ihren individuellen Bedarf abgestimmt</li>
 
   </main>
   <footer class="footer text-faded text-center py-5">
-  <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König; <a href="/impressum">Impressum</a></p></div>
 </footer>
 
 
