--- a/public/kontakt/index.html
+++ b/public/kontakt/index.html
@@ -52,8 +52,9 @@
 <p><strong>TEL. 0043 699 12592620</strong></p>
 <p>eMail : <a href="mailto:heidigraber4@gmail.com">heidigraber4@gmail.com</a></p>
 <h1 id="öffnungszeiten">ÖFFNUNGSZEITEN</h1>
-<p>Montag: 14.00 – 19 .00 , Dienstag: 16.30 – 20.30</p>
-<p>Mittwoch: 10.00 -12.30 , 14.30 -18.30</p>
+<p>Montag: 14.00 – 19 .00<br>
+Dienstag: 16.30 – 20.30<br>
+Mittwoch: 10.00 -12.30, 14.30 -18.30</p>
 <h1 id="adresse">ADRESSE</h1>
 <p><strong>Mockenstraße 8, 6971 Hard</strong></p>
 </p>
@@ -67,7 +68,7 @@
 
   </main>
   <footer class="footer text-faded text-center py-5">
-  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König; <a href="/impressum">Impressum</a></p></div>
+  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König | <a href="/impressum">Impressum</a></p></div>
 </footer>
 
 
