--- a/public/vita/index.html
+++ b/public/vita/index.html
@@ -107,7 +107,7 @@
 
   </main>
   <footer class="footer text-faded text-center py-5">
-  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König; <a href="/impressum">Impressum</a></p></div>
+  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König | <a href="/impressum">Impressum</a></p></div>
 </footer>
 
 
