--- a/public/impressum/index.html
+++ b/public/impressum/index.html
@@ -109,7 +109,7 @@ Sollte irgendwelcher Inhalt oder die designtechnische Gestaltung einzelner Seite
 
   </main>
   <footer class="footer text-faded text-center py-5">
-  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König; <a href="/impressum">Impressum</a></p></div>
+  <div class="container"><p class="m-0 small">Copyright &copy; Dr. Heidi Graber-König | <a href="/impressum">Impressum</a></p></div>
 </footer>
 
 
