--- a/public/kontakt/index.html
+++ b/public/kontakt/index.html
@@ -49,14 +49,14 @@
                         <div class="cta-inner bg-faded text-center rounded">
                             <p class="mb-0"><h1 id="termine">TERMINE</h1>
 <p>Termine nach telefonischer oder email Vereinbarung</p>
-<p><strong>TEL. 0043 699 12592620</strong></p>
-<p>eMail : <a href="mailto:heidigraber4@gmail.com">heidigraber4@gmail.com</a></p>
+<p><strong>Telefon</strong>: 0043 699 12592620</p>
+<p><strong>eMail</strong>: <a href="mailto:heidigraber4@gmail.com">heidigraber4@gmail.com</a></p>
 <h1 id="öffnungszeiten">ÖFFNUNGSZEITEN</h1>
 <p>Montag: 14.00 – 19 .00<br>
 Dienstag: 16.30 – 20.30<br>
 Mittwoch: 10.00 -12.30, 14.30 -18.30</p>
 <h1 id="adresse">ADRESSE</h1>
-<p><strong>Mockenstraße 8, 6971 Hard</strong></p>
+<p>Mockenstraße 8, 6971 Hard</p>
 </p>
 							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5392.488241490137!2d9.683330012999972!3d47.48515749623412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479b1238f5533ba5%3A0x307bc01c515cd6cb!2sMockenstra%C3%9Fe%208%2C%206971%20Hard!5e0!3m2!1sde!2sat!4v1744302738647!5m2!1sde!2sat" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
